--- a/ArchivMensch/ArchivMensch/ArchivMensch.csproj
+++ b/ArchivMensch/ArchivMensch/ArchivMensch.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>AddPage.cs</DependentUpon>
     </Compile>
     <Compile Include="Backend.cs" />
+    <Compile Include="Blueprints.cs" />
     <Compile Include="MainPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +86,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ArchivMensch.db" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
