--- a/ArchivMensch/ArchivMensch/ArchivMensch.csproj
+++ b/ArchivMensch/ArchivMensch/ArchivMensch.csproj
@@ -63,6 +63,12 @@
     </Compile>
     <Compile Include="Backend.cs" />
     <Compile Include="Blueprints.cs" />
+    <Compile Include="DirectQuery.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DirectQuery.Designer.cs">
+      <DependentUpon>DirectQuery.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +79,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AddPage.resx">
       <DependentUpon>AddPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DirectQuery.resx">
+      <DependentUpon>DirectQuery.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainPage.resx">
       <DependentUpon>MainPage.cs</DependentUpon>
