--- a/ArchivMensch/ArchivMensch/ArchivMensch.csproj
+++ b/ArchivMensch/ArchivMensch/ArchivMensch.csproj
@@ -69,6 +69,12 @@
     <Compile Include="DirectQuery.Designer.cs">
       <DependentUpon>DirectQuery.cs</DependentUpon>
     </Compile>
+    <Compile Include="FindPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FindPage.Designer.cs">
+      <DependentUpon>FindPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectQuery.resx">
       <DependentUpon>DirectQuery.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FindPage.resx">
+      <DependentUpon>FindPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainPage.resx">
       <DependentUpon>MainPage.cs</DependentUpon>
