--- a/ArchivMensch/ArchivMensch/ArchivMensch.csproj
+++ b/ArchivMensch/ArchivMensch/ArchivMensch.csproj
@@ -63,6 +63,12 @@
     </Compile>
     <Compile Include="Backend.cs" />
     <Compile Include="Blueprints.cs" />
+    <Compile Include="ChangePage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangePage.Designer.cs">
+      <DependentUpon>ChangePage.cs</DependentUpon>
+    </Compile>
     <Compile Include="DirectQuery.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AddPage.resx">
       <DependentUpon>AddPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChangePage.resx">
+      <DependentUpon>ChangePage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DirectQuery.resx">
       <DependentUpon>DirectQuery.cs</DependentUpon>
